--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     </a>
                     <ul>
                         <li><a href="/about/">About</a></li>
-                        <li><a href="/resume/resume.pdf" target="_blank" rel="noopener noreferrer">Resume</a></li>
+                        <li><a href="/resume/external.pdf" target="_blank" rel="noopener noreferrer">Resume</a></li>
                     </ul>
                 </div>    
             </nav>
