--- a/gumball-machine/index.html
+++ b/gumball-machine/index.html
@@ -61,7 +61,7 @@
             <li><a href="/about/">About</a></li>
             <li>
               <a
-                href="/resume/external.pdf"
+                href="/resume/resume.pdf"
                 target="_blank"
                 rel="noopener noreferrer"
                 >Resume</a
